--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div id="main">
         
-            <div class="cards">
+            <div class="card">
                 <img class="front" src="./images/ang.jpg"/>
                 <img class="back" src="./images/back.jpg" />
             </div>
-            <div class="cards">
+            <div class="card">
                 <img class="front" src="./images/ang.jpg"/>
                 <img class="back" src="./images/back.jpg" />
             </div>
