added the buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    
+    <button type="button">Start</button>
+
     <div id="main">
         
             <div class="card">
