styling the images

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <img class="back" src="./images/back.jpg" />
             </div>
         </div>
+        <input type="button" value="Stop">
     <script src="script.js"></script>
 </body>
 </html>
